@@ -1,3 +1,8 @@
+2005-04-11  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	PR libfortran/20950
+	* gfortran.dg/pr20950.f: New test.
+
 2005-04-18  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	PR libfortran/19216
